--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="TaskFlow - Application to manage your tasks efficiently.">
-    <title>TaskFlow</title>
+    <title>Notepad</title>
 </head>
 
 <body class="bg-gray-100">
