--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="TaskFlow - Application to manage your tasks efficiently.">
+    <meta name="description" content=" Notepad - Application to manage your tasks efficiently.">
     <title>Notepad</title>
 </head>
 
